--- a/.github/workflows/etl-flight-data.yaml
+++ b/.github/workflows/etl-flight-data.yaml
@@ -22,6 +22,9 @@ jobs:
         run: pip install -r py/requirements.txt
 
       - name: Run Python script
+        env:
+            ARRIVALS_API: ${{ secrets.ARRIVALS_API }}
+            DEPARTURES_API: ${{ secrets.DEPARTURES_API }}
         run: |
           python py/etl.py
           
